--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.3
 colorama==0.4.6
 Flask==2.2.2
 Flask-GraphQL==2.0.1
+Flask-Login==0.6.2
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==3.0.2
 graphene==2.1.8
@@ -17,12 +18,15 @@ graphql-server-core==1.1
 greenlet==2.0.1
 idna==3.4
 importlib-metadata==5.0.0
+isodate==0.6.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.3
 MarkupSafe==2.1.1
 promise==2.3
 psycopg2==2.9.5
+pyparsing==3.0.9
+rdflib==6.2.0
 Rx==1.6.1
 singledispatch==3.7.0
 six==1.16.0
