--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,13 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.3
 MarkupSafe==2.1.1
+numpy==1.23.5
+pandas==1.5.1
 promise==2.3
 psycopg2==2.9.5
 pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.6
 rdflib==6.2.0
 Rx==1.6.1
 singledispatch==3.7.0
