--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ alembic==1.8.1
 aniso8601==6.0.0
 anyio==3.6.2
 ariadne==0.8.0
+cachelib==0.9.0
 click==8.1.3
 colorama==0.4.6
 Flask==2.2.2
 Flask-GraphQL==2.0.1
 Flask-Login==0.6.2
 Flask-Migrate==3.1.0
+Flask-Session==0.4.0
 Flask-SQLAlchemy==3.0.2
 graphene==2.1.8
 graphene-sqlalchemy==2.3.0
