--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ __pycache__/
 # C extensions
 *.so
 
+# Front-end
+node_modules/
+
 # Distribution / packaging
 .Python
 build/
@@ -93,6 +96,9 @@ target/
 # IPython
 profile_default/
 ipython_config.py
+
+
+db
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
