--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.8.1
 aniso8601==6.0.0
 anyio==3.6.2
 ariadne==0.8.0
+autopep8==2.0.0
 cachelib==0.9.0
 click==8.1.3
 colorama==0.4.6
@@ -30,6 +31,7 @@ owlrl==6.0.2
 pandas==1.5.1
 promise==2.3
 psycopg2==2.9.5
+pycodestyle==2.10.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.6
@@ -38,8 +40,10 @@ Rx==1.6.1
 singledispatch==3.7.0
 six==1.16.0
 sniffio==1.3.0
+SPARQLWrapper==2.0.0
 SQLAlchemy==1.4.44
 starlette==0.13.8
+tomli==2.0.1
 typing_extensions==4.4.0
 Werkzeug==2.2.2
 zipp==3.10.0
