--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ psycopg2==2.9.5
 pycodestyle==2.10.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 pytz==2022.6
 rdflib==6.2.0
 Rx==1.6.1
