--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask==2.2.2
 Flask-GraphQL==2.0.1
 Flask-Login==0.6.2
 Flask-Migrate==3.1.0
+flask-rdf==0.2.1
 Flask-Session==0.4.0
 Flask-SQLAlchemy==3.0.2
 graphene==2.1.8
@@ -35,6 +36,7 @@ pycodestyle==2.10.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.21.0
+python-mimeparse==0.1.4
 pytz==2022.6
 rdflib==6.2.0
 Rx==1.6.1
